--- a/I'm just a memer/Base.lproj/Main.storyboard
+++ b/I'm just a memer/Base.lproj/Main.storyboard
@@ -16,26 +16,78 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bottom Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VeX-Pw-Szk">
+                                <rect key="frame" x="52" y="181" width="311" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CgF-VF-jAu">
+                                <rect key="frame" x="52" y="89" width="311" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tCr-Xy-Jeb">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="292" width="414" height="453"/>
                             </imageView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="tzk-mz-qLR">
+                                <rect key="frame" x="188.5" y="500" width="37" height="37"/>
+                            </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HDx-Yv-zep">
+                                <rect key="frame" x="134" y="793" width="146" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Generate Meme"/>
+                                <connections>
+                                    <action selector="generateMemePressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="tgp-Fl-nS8"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EKG-vb-M1q">
+                                <rect key="frame" x="52" y="210" width="311" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jk1-9N-IuN">
+                                <rect key="frame" x="52" y="118" width="311" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="tCr-Xy-Jeb" secondAttribute="bottom" id="Awb-UB-W45"/>
+                            <constraint firstItem="VeX-Pw-Szk" firstAttribute="top" secondItem="Jk1-9N-IuN" secondAttribute="bottom" constant="29" id="4Ce-8i-xL5"/>
+                            <constraint firstItem="HDx-Yv-zep" firstAttribute="top" secondItem="tCr-Xy-Jeb" secondAttribute="bottom" constant="48" id="92m-lQ-1ZC"/>
                             <constraint firstItem="tCr-Xy-Jeb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Axq-0L-LVb"/>
-                            <constraint firstItem="tCr-Xy-Jeb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Hbh-tx-YEl"/>
+                            <constraint firstItem="tCr-Xy-Jeb" firstAttribute="top" secondItem="EKG-vb-M1q" secondAttribute="bottom" constant="48" id="HdA-Q6-u83"/>
+                            <constraint firstItem="tzk-mz-qLR" firstAttribute="centerX" secondItem="tCr-Xy-Jeb" secondAttribute="centerX" id="QyD-W8-0Ub"/>
+                            <constraint firstItem="CgF-VF-jAu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="52" id="Syp-c1-5Mi"/>
+                            <constraint firstItem="VeX-Pw-Szk" firstAttribute="trailing" secondItem="EKG-vb-M1q" secondAttribute="trailing" id="Tmo-ha-tCD"/>
+                            <constraint firstItem="EKG-vb-M1q" firstAttribute="leading" secondItem="VeX-Pw-Szk" secondAttribute="leading" id="UZ4-0Z-Dpm"/>
+                            <constraint firstItem="tzk-mz-qLR" firstAttribute="centerY" secondItem="tCr-Xy-Jeb" secondAttribute="centerY" id="W76-1P-a1m"/>
+                            <constraint firstItem="HDx-Yv-zep" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YbD-GD-fpM"/>
+                            <constraint firstItem="CgF-VF-jAu" firstAttribute="trailing" secondItem="Jk1-9N-IuN" secondAttribute="trailing" id="Z4b-bw-OIa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Jk1-9N-IuN" secondAttribute="trailing" constant="51" id="bag-YP-nxt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tCr-Xy-Jeb" secondAttribute="trailing" id="d7K-u9-MHP"/>
+                            <constraint firstItem="CgF-VF-jAu" firstAttribute="leading" secondItem="Jk1-9N-IuN" secondAttribute="leading" id="dqf-2q-N4A"/>
+                            <constraint firstItem="Jk1-9N-IuN" firstAttribute="top" secondItem="CgF-VF-jAu" secondAttribute="bottom" constant="8" symbolic="YES" id="fAq-4p-uAq"/>
+                            <constraint firstItem="EKG-vb-M1q" firstAttribute="top" secondItem="VeX-Pw-Szk" secondAttribute="bottom" constant="8" symbolic="YES" id="gDc-Wp-rQH"/>
+                            <constraint firstItem="CgF-VF-jAu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="45" id="klu-jD-7nf"/>
+                            <constraint firstItem="VeX-Pw-Szk" firstAttribute="leading" secondItem="CgF-VF-jAu" secondAttribute="leading" id="obH-uv-8zr"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="HDx-Yv-zep" secondAttribute="bottom" constant="34" id="pRe-0f-nxn"/>
+                            <constraint firstItem="EKG-vb-M1q" firstAttribute="trailing" secondItem="Jk1-9N-IuN" secondAttribute="trailing" id="tPv-cd-Tjg"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="apiFetchIndicator" destination="tzk-mz-qLR" id="zvP-Hs-R3Q"/>
+                        <outlet property="bottomTextField" destination="EKG-vb-M1q" id="j0S-ZB-bvs"/>
                         <outlet property="memeImageView" destination="tCr-Xy-Jeb" id="lfy-eK-VLP"/>
+                        <outlet property="topTextField" destination="Jk1-9N-IuN" id="Tll-p8-Ekg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="91" y="35"/>
+            <point key="canvasLocation" x="89.855072463768124" y="34.821428571428569"/>
         </scene>
     </scenes>
     <resources>
