Add Pick a Meme button that presents empty SwiftUI view

--- a/I'm just a memer/Base.lproj/Main.storyboard
+++ b/I'm just a memer/Base.lproj/Main.storyboard
@@ -29,10 +29,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tCr-Xy-Jeb">
-                                <rect key="frame" x="0.0" y="292" width="414" height="453"/>
+                                <rect key="frame" x="0.0" y="394" width="414" height="351"/>
                             </imageView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="tzk-mz-qLR">
-                                <rect key="frame" x="188.5" y="500" width="37" height="37"/>
+                                <rect key="frame" x="188.5" y="551" width="37" height="37"/>
                             </activityIndicatorView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HDx-Yv-zep">
                                 <rect key="frame" x="134" y="793" width="146" height="35"/>
@@ -52,6 +52,14 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yCR-TP-zlD">
+                                <rect key="frame" x="146" y="292" width="122" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Pick a Meme"/>
+                                <connections>
+                                    <action selector="pickAMemePressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="dfu-zd-yTT"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -59,7 +67,8 @@
                             <constraint firstItem="VeX-Pw-Szk" firstAttribute="top" secondItem="Jk1-9N-IuN" secondAttribute="bottom" constant="29" id="4Ce-8i-xL5"/>
                             <constraint firstItem="HDx-Yv-zep" firstAttribute="top" secondItem="tCr-Xy-Jeb" secondAttribute="bottom" constant="48" id="92m-lQ-1ZC"/>
                             <constraint firstItem="tCr-Xy-Jeb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Axq-0L-LVb"/>
-                            <constraint firstItem="tCr-Xy-Jeb" firstAttribute="top" secondItem="EKG-vb-M1q" secondAttribute="bottom" constant="48" id="HdA-Q6-u83"/>
+                            <constraint firstItem="yCR-TP-zlD" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="GUd-kg-VFD"/>
+                            <constraint firstItem="yCR-TP-zlD" firstAttribute="top" secondItem="EKG-vb-M1q" secondAttribute="bottom" constant="48" id="Qkh-yP-cRi"/>
                             <constraint firstItem="tzk-mz-qLR" firstAttribute="centerX" secondItem="tCr-Xy-Jeb" secondAttribute="centerX" id="QyD-W8-0Ub"/>
                             <constraint firstItem="CgF-VF-jAu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="52" id="Syp-c1-5Mi"/>
                             <constraint firstItem="VeX-Pw-Szk" firstAttribute="trailing" secondItem="EKG-vb-M1q" secondAttribute="trailing" id="Tmo-ha-tCD"/>
@@ -68,6 +77,7 @@
                             <constraint firstItem="HDx-Yv-zep" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YbD-GD-fpM"/>
                             <constraint firstItem="CgF-VF-jAu" firstAttribute="trailing" secondItem="Jk1-9N-IuN" secondAttribute="trailing" id="Z4b-bw-OIa"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Jk1-9N-IuN" secondAttribute="trailing" constant="51" id="bag-YP-nxt"/>
+                            <constraint firstItem="tCr-Xy-Jeb" firstAttribute="top" secondItem="yCR-TP-zlD" secondAttribute="bottom" constant="67" id="ccj-Ok-XAK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tCr-Xy-Jeb" secondAttribute="trailing" id="d7K-u9-MHP"/>
                             <constraint firstItem="CgF-VF-jAu" firstAttribute="leading" secondItem="Jk1-9N-IuN" secondAttribute="leading" id="dqf-2q-N4A"/>
                             <constraint firstItem="Jk1-9N-IuN" firstAttribute="top" secondItem="CgF-VF-jAu" secondAttribute="bottom" constant="8" symbolic="YES" id="fAq-4p-uAq"/>
